feat: Agregar modelos, controladores y rutas para productos y categorías, incluyendo documentación Swagger y mejoras en la gestión de usuarios
