# src/config/swagger/swagger-output.json
@@ -98,6 +98,145 @@
         ]
       }
     },
+    "/productos/": {
+      "get": {
+        "tags": [
+          "Productos"
+        ],
+        "summary": "Obtiene todos los productos",
+        "description": "Obtiene una lista de todos los productos registrados en el sistema.",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/productos/{id}": {
+      "get": {
+        "tags": [
+          "Productos"
+        ],
+        "summary": "Obtiene un producto por ID",
+        "description": "Obtiene los detalles de un producto específico por su ID.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del producto a obtener"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Productos"
+        ],
+        "summary": "Borrar un producto por ID",
+        "description": "Borrar un producto específico por su ID.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del producto a borrar"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/productos/nuevo": {
+      "post": {
+        "tags": [
+          "Productos"
+        ],
+        "summary": "Crear un nuevo producto",
+        "description": "Crea un nuevo producto en el sistema.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Datos del nuevo producto.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nombre": {
+                  "type": "string",
+                  "example": "Producto ejemplo"
+                },
+                "descripcion": {
+                  "type": "string",
+                  "example": "Descripción del producto"
+                },
+                "precio": {
+                  "type": "number",
+                  "example": 100
+                },
+                "stock": {
+                  "type": "number",
+                  "example": 10
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/productos/restaurar/{id}": {
+      "put": {
+        "tags": [
+          "Productos"
+        ],
+        "summary": "Restaurar un producto por ID",
+        "description": "Restaurar un producto específico por su ID.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del producto a restaurar"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/session/login": {
       "post": {
         "tags": [
@@ -152,6 +291,20 @@
         }
       }
     },
+    "/session/logout": {
+      "post": {
+        "tags": [
+          "Sessions"
+        ],
+        "summary": "Logout de usuario",
+        "description": "Permite cerrar sesión y eliminar el JWT",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/usuarios/": {
       "get": {
         "tags": [
@@ -159,6 +312,19 @@
         ],
         "summary": "Obtiene todos los usuarios",
         "description": "Obtiene una lista de todos los usuarios registrados en el sistema.",
+        "parameters": [
+          {
+            "name": "scope",
+            "in": "query",
+            "description": "Scope para ver diferentes vistas del usuario",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "defaultScope",
+              "configScope"
+            ]
+          }
+        ],
         "responses": {
           "default": {
             "description": ""
